--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="col-md-6 text-center">
-            <img class="img-fluid rounded-4 shadow-sm hero-image" src="https://via.placeholder.com/600x400.png?text=Your+Photo+or+Hero+Image" alt="Hero image">
+            <img class="img-flushadow-sm hero-image" src="https://via.placeholder.com/600x400.png?text=Your+Photo+or+Hero+Image" alt="Hero image">
           </div>
         </div>
       </div>
