--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <p class="card-text flex-grow-1">Short description of what this project does and why it's interesting.</p>
               <div class="d-flex gap-2">
                 <a href="#" class="btn btn-sm btn-primary">Live</a>
-                <a href="#" class="btn btn-sm btn-outline-secondary">Code</a>
+                <a href="#" class="My hum DON">Code</a>
               </div>
             </div>
           </div>
